--- a/442-laser/latex/spektrum_analysator.tex
+++ b/442-laser/latex/spektrum_analysator.tex
@@ -1,5 +1,5 @@
 \chapter{Modenabstand des Lasers}
-\section{Theorie von Moden}
+\section{Modenspektrum optischer Resonatoren}
 
 In optischen Resonatoren können verschiedene Lösungen für stehende Wellen, und somit stabile Oszillation, gefunden werden. Diese Lösungen haben verschiedene Frequenzen und werden Moden genannt. In unserem Fall handelt es sich um Gaußstrahlen in konfokalen- und halbsymetrischen Resonatoren.
 
@@ -60,7 +60,6 @@ Es ist hierbei wichtig, dass das Verstärkungsprofil von Neon nur eine Breite vo
 Bei der Messung wurden hier allerdings 9 Lasermoden gefunden, wobei die erste vermutlich noch zu der vorherigen Periode gehört, was zu 8 tatsächlichen Lasermoden führt. Dies sind doppelt so viele wie maximal möglich sind, allerdings ist der Abstand der Moden erheblich kleiner als der Erwartungswert. Es muss insgesamt davon ausgeganen werden, dass in dem Laserresonator nicht nur Longitudinalmoden sondern auch Transversalmoden angeregt wurden. Dann wäre der Abstand zweier Longitudinalmoden der doppelt so groß wie der bestimmte. Damit ergibt sich ein Wert von $\Delta \nu_\text{Laser} = \SI{2.4(8)}{\mega\hertz}$. Dieser Wert liegt in einer 1-$\sigma$ Umgebung zum erwarteten Modenabstandes von Longitudinalmoden für unsere Resonatorlänge.
 
 Die angeregten Transversalmoden sprechen für eine relativ schlechte Justage des Lasers.
-
 
 
 \section{Spektrumanalysator}
