--- a/442-laser/latex/waist.tex
+++ b/442-laser/latex/waist.tex
@@ -78,7 +78,7 @@ Dabei ist zudem der Parameter für die Rayleighlänge des Strahls $x(w)=\pi  \fr
 Auch die zu erwartende axiale Strahlbreite für die aufgebaute Konfiguration nach Gl. \ref{eq:gauss} aufgetragen. Es ist klar eine Abweichung des theoretischen Strahlprofils
 zu den gemessenen Werten zu erkennen.
 Bei einer Anpassung des theoretischen Modells mit dem oben genannten Faktor der Strahltaillengröße $w_0$, aber der theoretischen Rayleighlänge $z_0$ und ohne Versatz für den Abstand $z$, ergibt sich
-eine deutlich bessere Übereinstimmung mit den Messwerten. Die Vermutung, dass die Strahlbreite nur mit einem Proportionalitätsfaktor dem gemessenen "Durchmesser" des Strahls entspricht, scheint also
+eine deutlich bessere Übereinstimmung mit den Messwerten. Die Vermutung, dass die tatsächliche Strahlbreite nur mit einem Proportionalitätsfaktor den gemessenen Abmaßen des Strahls entspricht, scheint also
 der Realität zu entsprechen.
 Die Darstellungen sind in Abbildung \ref{fig:waist.pdf} zu sehen.
 
