--- a/442-laser/latex/polarisation.tex
+++ b/442-laser/latex/polarisation.tex
@@ -106,7 +106,7 @@ $U_\text{max}=\SI{105(5)}{\milli\V}$ und $U_\text{min}=\SI{1.6(0.08)}{\milli\V}$
 
 Dieser Wert liegt knapp unter 1, der Strahl ist also weitgehend aber nicht vollständig linear polarisiert. Das ist ein plausibler Wert für den genutzten Aufbau. Die Polarisationsrichtung wird bei dem Aufbau durch die Transmissionsachse der
 an den Enden der Entladungsröhre verbauten Brewsterfenster bestimmt, welche nur die dazu parallele Komponente des elektrischen Felds des Laserstrahls in Richtung der Strahlachse transmittieren
-(die anderen Komponenten werden aus der optischen Achse des Aufbaus heraus abgelenkt, werden also nicht weiter als Teil des Laserstrahls transmittiert). \textcolor{blue}{factcheck notwendig hier, braucht eine CITATION}
+(die anderen Komponenten werden aus der optischen Achse des Aufbaus heraus abgelenkt, werden also nicht weiter als Teil des Laserstrahls transmittiert). \cite[224-225]{Demtroeder2}
 So entsteht theoretisch ideal linear polarisiertes Licht.
 Aufgrund von Abweichungen der Brewsterfenster von ihrer idealen Form oder Verschmutzungen auf diesen sowie
 weiteren Reflexionen des transmittierten Laserstrahls an den Spiegeln S1 und S2, die eventuell insgesamt nicht ideal polarisationserhaltend aufgebaut waren (also nicht genau in jeweils $45\%$ Winkeln zueinander und zur Einfallsachse des Strahls),
