--- a/442-laser/latex/polarisation.tex
+++ b/442-laser/latex/polarisation.tex
@@ -140,3 +140,15 @@ Als Anpassungsparameter ergeben sich:
 	a = \num{-1039(6)e-4}, \quad  b  = \num{1744(4)e-5}, \quad c = \num{6.171(0.007)}, \quad d = \num{1054(4)e-4}
 \end{align*}
 Der erwartete funktionale Zusammenhang von $I(\phi)\propto \cos(\phi+\alpha)^2$ ist sehr gut zu beobachten, man kann schlussfolgern, dass das Gesetz von Malus den beobachteten Einfluss des Polarisators auf die Intensität des Laserstrahls beschreibt.
+
+
+\section{Optische Diode}
+
+Die zuvor bestimmen Polarisationseigenschaften werden nun genutzt um eine einfache optische Diode aufzubauen. Hierbei wird nach dem Linearpolarisator ein $\lambda / 4$ Plättchen benutzt um das linear polarisierte Licht zu zirkulärer Polarisation zu konvertieren. \todo{cite this}
+Alle Komponenten, an denen der Strahl hinter der Diode reflektieren kann sind stets orthogonal zum Strahl (insbesondere Relevant der externe Resonator mit seinen Spiegeln), so dass bei reflektion die Richtung der zirkulären Polarisation wechselt. \todo{cite this as well}
+
+Trifft dann so reflektiertes Licht wieder auf die $\lambda / 4$-Platte, wird es zu linear polarisiertem Licht umgewandelt, dass Polarisationsrichtung $90^\circ$ zu der ursprünglichen ist. Der Linearpolarisator wird so ausgerichtet, dass er parallel zu der Polarisationsrichtung des Lasers steht. als Konsequenz trifft das reflektierte Licht mit $90^\circ$ gedrehter Polarisation auf den Polarisator, wird also maximal absorbiert.
+
+Eine solche Diode wurde hinter dem Spiegel S2 aufgebaut. Dies dient vorallem dazu instabilitäten des Lasers durch Reflexion an dem später aufzubauenden externen Resonator vorzubeugen.
+
+Bei Aufbau der Diode wird zunächst das Minimum der Transmission am Linearpolarisator mittels der Photodiode bestimmt und dieser damm um $90^\circ$ gedreht. Das $\lambda / 4$ plättchen wird $45^\circ$ zu der Minimalstellung des Linearpolarisators (und somit auch zu der Maximalstellung) verdreht.
