--- a/442-laser/latex/references.bib
+++ b/442-laser/latex/references.bib
@@ -44,6 +44,17 @@ publisher = {Springer},
     publisher = {Springer},
 }
 
+@book{Demtroeder2,
+author = {Demtröder, Wolfgang},
+edition = {7},
+publisher = {Springer},
+title = {Experimentalphysik 2: Elektrizität und Optik},
+year = {2017},
+doi = {10.1007/978-3-662-55790-7},
+doiurl = {https://doi.org/10.1007/978-3-662-55790-7},
+}
+
+
 @book{gerthsen,
 	author = {Gerthsen, Christian and Meschede, Dieter},
 	publisher = {Springer},
