--- a/442-laser/latex/wellenlaenge.tex
+++ b/442-laser/latex/wellenlaenge.tex
@@ -92,8 +92,8 @@ Die beiden so bestimmten Werte für $\lambda$ des Lasers sind: $\lambda_{500}=\S
 
 Es fällt sofort auf, dass sich aus der Messreihe mit dem Gitter mit $1000$ Strichen pro mm als Steigung eine Wellenlänge ergibt, die sehr weit von der
 Wellenlänge des angestrebten Laserübergangs von $\lambda_\text{Lit}=\SI{632.6}{\nano\meter}$ entfernt ist (auch deutlich weiter entfernt als die zu erwartende Linienbreite des Übergangs,
-siehe hierzu Abschnitt \todo{Analysator zu Linienbreite}). Auch eine der anderen möglichen Laserübergänge vom angeregten Zustand der Ne-Atome
-(Abschnitt \todo{TO DO Theoriesec Termschema}) entspricht diese Wellenlänge nicht.
+siehe hierzu Abschnitt \ref{sec:linienbreite}). Auch eine der anderen möglichen Laserübergänge vom angeregten Zustand der Ne-Atome
+(Abschnitt \ref{sec:theorielaser}) entspricht diese Wellenlänge nicht.
 Das Laserlicht wurde außerdem auch optisch als deutliches rot im optischen Bereich verortet. Es ist also damit zu rechnen, dass die Wellenlänge sich im optischen roten Bereich befindet.
 Im Gegensatz dazu entspricht die Wellenlänge aus der Messreihe des anderen Gitters mit $500$ Strichen pro mm,$\lambda_{500}=\SI{616(5)}{\nano\meter}$, deutlich besser der zu erwartenden Wellenlänge.
 Es ist also damit sehr wahrscheinlich, dass die Messung des Gitters mit $1000$ Strichen pro mm systematische Fehler enthält und wird daher im folgenden als unplausibel verworfen.
@@ -106,7 +106,7 @@ einem zu erwarteten Wert möglich auf die Werte zu rechnen, sondern die Verzerru
 
 Durch die mehrfache Messung des Interferenzmusters mit dem Gitter mit $500$ Strichen pro mm ist trotzdem noch eine ausreichende Menge Datenpunkte vorhanden, um eine sinnvolle Auswertung durchführen zu können.
 Der geringe Unterschied von $\lambda_{500}$ zum Literaturwert $\lambda_\text{Lit}$ von $2,8\%$ (bei Beachtung der $1\sigma$-Umgebung: $1,9\%-3,6\%$) zeigt dies.
-In Abschnitt \todo{Section ref Analysator} wird gezeigt werden, dass in der Laserkavität mehrere longitudinale und vermutlich auch transversale Moden anschwingen,
+In Abschnitt \ref{sec:optical_analyzer} wird gezeigt werden, dass in der Laserkavität mehrere longitudinale und vermutlich auch transversale Moden anschwingen,
 deren Frequenzen sich jeweils um (aus der Messung mit dem Spektrumanalysator) $\SI{293.3(0.5)}{\mega\hertz}$ unterscheiden, also auch die Wellenlängen der schwingenden Moden unterschiedlich sind.
 Es liegt nahe, dass bei der Wellenlängenmessung der Effekt der sich überlagernden Moden des Resonators sichtbar wird, der die messbare Wellenlänge des am ebenen Resonatorspiegel ausgekoppelten Laserlichts
 im Vergleich zur Referenzwellenlänge des Laserübergangs von $3s\to 2p$ verschiebt.
