--- a/442-laser/latex/einleitung.tex
+++ b/442-laser/latex/einleitung.tex
@@ -10,4 +10,40 @@ Im durchgeführten Experiment wurde als sehr typische Form eines eines Gaslasers
 der Helium-Neon(HeNe)-Laser aufgebaut und das resultierende Laserlicht auf seine Wellenlänge und den Polarisationszustand untersucht.
 Außerdem werden die Moden des erzeugten Laserstrahls mithilfe eines externen Resonators und einem optischen Spektralanalysator untersucht.
 
-\section{Funktionsweise von Lasern}
+\section{Funktionsweise von Lasern}\label{sec:theorielaser}
+
+Ein Laser braucht ein aktives Medium mit Besetzungsinversion, also einer höheren Besetzungszahldichte eines energetisch höheren Zustands als eines niedrigeren, sowie einen Rückkopplungsmechanismus für die emittierten Laserphotonen.
+Letzteres wird meist durch einen Spiegelresonator erreicht, der mit seinen Abmessungen (also Abstand der Spiegel/Resonatorlänge $L$ und Krümmungsradien der Spiegel $R_i$ ($i=\{1,2\}$) die angeregten Mode(n) des Laserstrahls bestimmt.
+Im Experiment wurde ein HeNe-Laser aufgebaut, dessen Energiezustandsschema wie folgt aussieht (Abbildung \ref{fig:lasertermschema.png}:
+
+\jafps{lasertermschema.png}{Termschema des aufgebauten HeNe-Lasers. Abbildung übernommen aus \cite[16]{Versuchsanleitung442}}{0.6}
+
+Durch eine Entladungsröhre, die mit Hochspannung betrieben wird, werden die Heliumatome über Elektronenstöße in Zustand $2^1S_0$ angeregt, der sehr nah am angeregten $3s$-Zustand von Neonatomen ist.
+Durch Kollisionen wird die Energie der $2^1S_0$-Heliumatome auf die Neonatome des Grundzustands übertragen, welche sich dann im $3s$-Zustand befinden.
+Durch initial spontane Emission und darauf folgendde stimulierte Emission werden beim Übergang
+der Neonatome in den $2p$-Zustand die zueinander kohärenten, monochromatischen und phasengleichen Photonen des gesuchten Laserübergangs mit $\lambda_\text{Lit}=\SI{632.6}{\nano\meter}$ \cite[19]{Versuchsanleitung442} emittiert.
+Anschließend werden die Neonatome durch spontane Emission (inkohärentes Licht in zufällige Richtung, hat keinen Einfluss auf das Laserlicht) in den $1s$-Zustand und danach durch Kollisionen mit der Wand der Entladungsröhre, in dem sich das aktive Medium befindet, in den Grundzustand abgeregt
+(der Übergang in den Grundzustand kann nur so erfolgen, ein Übergang durch spontane Emission ist elektrisch verboten).
+Es können auch andere Laserübergänge erfolgen (siehe Termschema \ref{fig:lasertermschema.png}), durch dielektrische Beschichtungen der Resonatorspiegel werden diese im vorliegenden Aufbau jedoch von diesen absorbiert
+und entsprechend nicht im Laser verstärkt.
+Der Photonenstrahl wird durch die Spiegel des Resonators reflektiert und bei jedem Durchgang des aktiven Mediums, d.h. des HeNe-Gasgemischs (im Verhältnis 10:1), über stimulierte Emission verstärkt.
+An den Spiegeln wird ein großer Teil des Lichts reflektiert und ein geringer Teil aus dem Resonator ausgekoppelt.
+Die Moden eines konfokalen Resonators (also für zwei sphärische Spiegel mit $R_i=L$)) haben die Eigenfrequenzen:
+\begin{align}\label{eq:modes_konfokal}
+	\nu_{qmn}=\left(
+	q + \frac{m+n+1}{2}\cdot \frac{c}{2L}
+	\right)
+\end{align}
+$q$ entspricht der Modenzahl der longitudinalen (in Richtung der Strahlachse) Mode, $m,n$ der Modenzahl der transversalen Mode, die Kombination der drei Indizes charakterisiert die Eigenfrequenz einer Mode.
+
+\section{Aufbau des HeNe-Lasers}
+
+Um den HeNe-Laser aufzubauen, wurde zunächst ein Pilotlaser mit grünem, deutlich sichtbaren Laserlicht zur Justage der Strahlumlenkspiegel S1 und S2, sowie der Resonatorspiegel (sphärischer Spiegel (SRS) und planer Spiegel (ERS)),
+genutzt. Der Aufbau zur Justage ist in der Abbildung \ref{fig:aufbau_pilot.png} dargestellt. Das Prozedere der Justage ist in der Versuchsanleitung \cite[3-5]{Versuchsanleitung442} genau erläutert.
+
+\jafps{aufbau_pilot.png}{Aufbau zur Justage des Laserresonators mit Pilotlaser. Im Versuch wurde direkt vor dem Pilotlaser noch ein Abschwächungsfilter zur Reduktion der relativ hohen Intensität dessen und besseren Betrachtung der Laserreflexionen eingesetzt, welches aber die Methodik der Justage sonst nicht beeinflusst hat. Grafik entnommen aus \cite[5]{Versuchsanleitung442}.}{0.6}
+
+Nach Ausschalten des Pilotlasers wurde die Entladeröhre schließlich wieder eingesetzt und die Betriebsspannung angestellt. Nach weiterer Justage der Resonatorspiegel konnte dann ein Laserstrahl beobachtet werden, der HeNe-Laser wurde also erfolgreich aufgebaut.
+Die Laserleistung wurde über die Messung der Spannung an einer Photodiode, die eine dem auftreffenden Licht proportionale Spannung liefert, die hinter dem ERS aufgebaut wurde, optimiert -- die Spiegelstellung von SRS und ERS, bei der die Spannung maximal wurde, wurde für den weiteren Versuchsverlauf so fest gewählt.
+Die genaue Laserleistung kann nicht angegeben werden, da die Photodiode (aufgrund eines fehlenden durchgängig nutzbaren optischen Tisches) hinter dem Spiegel S2 aufgebaut wurde, also auf dem Weg zur Photodiode bereits Strahlintensität verloren ging.
+Als Maximalwert der Spannung konnte $U_{\text{PD}}=\SI{104(5)e-3}{\milli\V}$ gemessen werden, die Laserleistung beträgt also mindestens (wegen möglicher Verluste) $\SI{6}{\milli\W}$ (vgl. hierzu \cite[6]{Versuchsanleitung442}).
