--- a/442-laser/latex/einleitung.tex
+++ b/442-laser/latex/einleitung.tex
@@ -36,6 +36,8 @@ Die Moden eines konfokalen Resonators (also für zwei sphärische Spiegel mit $R
 \end{align}
 $q$ entspricht der Modenzahl der longitudinalen (in Richtung der Strahlachse) Mode, $m,n$ der Modenzahl der transversalen Mode, die Kombination der drei Indizes charakterisiert die Eigenfrequenz einer Mode.
 
+Neben den Resonatormoden hängt das Modenspektrum eines spezifischen Lasers auch vom Verstärkungsprofil des konkreten aktiven Mediums ab, welches durch die natürliche Linienbreite sowie die Dopplerverbreiterung der Emissionslinie des Laserübergangs gegeben ist. Die Dopplerbreite (als HWHM\footnote{\textit{Half Width at Half Maximum: halbe Breite des halben Maximums}} angebenen) aufgrund der Maxwell-Boltzmann-Geschwindigkeitsverteilung der Gasatome des aktiven Mediums
+
 \section{Aufbau des HeNe-Lasers}
 
 Um den HeNe-Laser aufzubauen, wurde zunächst ein Pilotlaser mit grünem, deutlich sichtbaren Laserlicht zur Justage der Strahlumlenkspiegel S1 und S2, sowie der Resonatorspiegel (sphärischer Spiegel (SRS) und planer Spiegel (ERS)),
