--- a/442-laser/latex/spektrum_analysator.tex
+++ b/442-laser/latex/spektrum_analysator.tex
@@ -18,11 +18,11 @@ Bei der Laserkavität hingegen wird davon ausgegangen, dass in erster Linie Long
 \end{align}
 
 
-Betrachet man das Verhältnis der Modenabstände von Laser und externem Resonator, dann kann man für die Modenabstände des Lasers leicht folgenden Zusammenhang finden; 
+Betrachet man das Verhältnis der Modenabstände von Laser und externem Resonator, dann kann man für die Modenabstände des Lasers leicht folgenden Zusammenhang finden;
 
 \begin{align}
-	q &= \frac{\nu_\text{Laser}}{\nu_\text{TEM}}\\
-	\imply \nu_\text{Laser} &= \nu_\text{TEM} \cdot q \label{eq:mode_frac}
+	q                       & = \frac{\nu_\text{Laser}}{\nu_\text{TEM}}     \\
+	\imply \nu_\text{Laser} & = \nu_\text{TEM} \cdot q \label{eq:mode_frac}
 \end{align}
 
 
@@ -55,7 +55,7 @@ Das Verhältnis dieser beiden Abstände ist dann $q = \num{8(1)e-2}$
 
 Damit ergibt sich nach Gl. \eqref{eq:mode_frac} ein mittlerer Modenabstand der Lasermoden von $\Delta \nu_\text{Laser} = \SI{1.2(4)}{\mega\hertz}$.
 
-Es ist hierbei wichtig, dass das Verstärkungsprofil von Neon nur eine Breite von ca. $\SI{1.5}{\giga\hertz}$ \cite[19]{Versuchsanleitung442} aufweist. Bei einem Transversalen Modenabstand von $\Delta\nu = \frac{c}{2 L} \approx \SI{290}{\mega\hertz}$ der Transversalmoden des Lasers mit unseren Kavitätsdimensionen können niemals mehr als 5 solcher Moden in dem Vestärkungsprofil liegen und somit emittieren.
+Es ist hierbei wichtig, dass das Verstärkungsprofil von Neon nur eine Breite von ca. $\SI{1.4}{\giga\hertz}$ \cite[19]{Versuchsanleitung442} aufweist (siehe Abschnitt \ref{sec:theorielaser}. Bei einem transversalen Modenabstand von $\Delta\nu = \frac{c}{2 L} \approx \SI{290}{\mega\hertz}$ der Transversalmoden des Lasers mit unseren Kavitätsdimensionen können niemals mehr als 5 solcher Moden in dem Vestärkungsprofil liegen und somit emittieren.
 
 Bei der Messung wurden hier allerdings 9 Lasermoden gefunden, wobei die erste vermutlich noch zu der vorherigen Periode gehört, was zu 8 tatsächlichen Lasermoden führt.
 Dies sind doppelt so viele wie maximal möglich sind, allerdings ist der Abstand der Moden erheblich kleiner als der Erwartungswert. Es muss insgesamt davon ausgeganen werden, dass in dem Laserresonator nicht nur Longitudinalmoden sondern auch Transversalmoden angeregt wurden. Dann wäre der Abstand zweier Longitudinalmoden der doppelt so groß wie der bestimmte Modenabstand, da zwischen jedem Paar von Longitudinalmoden eine Transversalmode liegt. Damit ergibt sich ein Wert von $\Delta \nu_\text{Laser} = \SI{2.4(8)}{\mega\hertz}$ als Modenabstand zweier Longitudinalmoden. Dieser Wert liegt in einer 1-$\sigma$ Umgebung zum erwarteten Modenabstandes von Longitudinalmoden für unsere Resonatorlänge.
