--- a/442-laser/latex/spektrum_analysator.tex
+++ b/442-laser/latex/spektrum_analysator.tex
@@ -1,5 +1,6 @@
 \chapter{Modenabstand des Lasers}
 \section{Modenspektrum optischer Resonatoren}
+\label{sec:mode_spectrum}
 
 In optischen Resonatoren können verschiedene Lösungen für stehende Wellen, und somit stabile Oszillation, gefunden werden. Diese Lösungen haben verschiedene Frequenzen und werden Moden genannt. In unserem Fall handelt es sich um Gaußstrahlen in konfokalen- und halbsymetrischen Resonatoren.
 
@@ -27,6 +28,7 @@ Betrachet man das Verhältnis der Modenabstände von Laser und externem Resonato
 
 
 \section{Optischer Analysator}
+\label{sec:optical_analyzer}
 
 Es soll nun die Modenstruktur der Laserkavität mittels eines Spektrumanalysator untersucht werden.
 Bei dem Analysator handelt es sich um einen externen, konfokalen Resonator, dessen Länge mittels eines Piezo-Kristalls verstellt wird. \cite{Versuchsanleitung442}
@@ -64,6 +66,7 @@ Die angeregten Transversalmoden sprechen für eine relativ schlechte Justage des
 
 
 \section{Spektrumanalysator}
+\label{sec:spectrumanalyzer}
 
 Nun wird der Modenabstand der Lasermoden mit einem Spektrumanalysator bestimmt. Hierzu wird ausgenutzt, dass die Lasermoden sich überlagern. Diese Überlagerung kann dargestellt werden als Summe von Cosinusfunktionen mit verschiedenen Frequenzen. Anwenden der hinlänglich bekannten Additionstheoreme zeigt, dass das gesamtsignal mit der Summe der Einzelfrequenzen, der Differenz der Einzelfrequenzen und mit den jeweiligen Einzelfrequenzen oszilliert. \cite{Versuchsanleitung442}
 
