--- a/442-laser/latex/einleitung.tex
+++ b/442-laser/latex/einleitung.tex
@@ -36,7 +36,12 @@ Die Moden eines konfokalen Resonators (also für zwei sphärische Spiegel mit $R
 \end{align}
 $q$ entspricht der Modenzahl der longitudinalen (in Richtung der Strahlachse) Mode, $m,n$ der Modenzahl der transversalen Mode, die Kombination der drei Indizes charakterisiert die Eigenfrequenz einer Mode.
 
-Neben den Resonatormoden hängt das Modenspektrum eines spezifischen Lasers auch vom Verstärkungsprofil des konkreten aktiven Mediums ab, welches durch die natürliche Linienbreite sowie die Dopplerverbreiterung der Emissionslinie des Laserübergangs gegeben ist. Die Dopplerbreite (als HWHM\footnote{\textit{Half Width at Half Maximum: halbe Breite des halben Maximums}} angebenen) aufgrund der Maxwell-Boltzmann-Geschwindigkeitsverteilung der Gasatome des aktiven Mediums
+Neben den Resonatormoden hängt das Modenspektrum eines spezifischen Lasers auch vom Verstärkungsprofil des konkreten aktiven Mediums ab, welches durch die natürliche Linienbreite sowie die Dopplerverbreiterung der Emissionslinie des Laserübergangs gegeben ist. Die Dopplerbreite (als HWHM\footnote{\textit{Half Width at Half Maximum: halbe Breite des halben Maximums}} angebenen) aufgrund der Maxwell-Boltzmann-Geschwindigkeitsverteilung der Gasatome des aktiven Mediums ergibt sich als \cite[19]{Versuchsanleitung442}:
+\begin{align*}
+	\nu_D = \sqrt{2k_B \ln(2)}{c}\cdot \nu_0 cdot \sqrt{T/m}
+\end{align*}
+Hierbei ist $k_B$ die Boltzmannkonstante, $\nu_0$ die zentrale Frequenz des Laserstrahlprofils, $T$ die Temperatur des Gases und $m$ die (molare) Masse der Gasatome. Es ergibt sich eien Breite von $\Delta \nu = \SI{1.4}{\giga\hertz}$ für $\lambda_\text{Lit}=\SI{632.8}{\nano\meter}$.
+
 
 \section{Aufbau des HeNe-Lasers}
 
