content mostly done

--- a/442-laser/latex/polarisation.tex
+++ b/442-laser/latex/polarisation.tex
@@ -144,11 +144,10 @@ Der erwartete funktionale Zusammenhang von $I(\phi)\propto \cos(\phi+\alpha)^2$ 
 
 \section{Optische Diode}
 
-Die zuvor bestimmen Polarisationseigenschaften werden nun genutzt um eine einfache optische Diode aufzubauen. Hierbei wird nach dem Linearpolarisator ein $\lambda / 4$ Plättchen benutzt um das linear polarisierte Licht zu zirkulärer Polarisation zu konvertieren. \todo{cite this}
-Alle Komponenten, an denen der Strahl hinter der Diode reflektieren kann sind stets orthogonal zum Strahl (insbesondere Relevant der externe Resonator mit seinen Spiegeln), so dass bei reflektion die Richtung der zirkulären Polarisation wechselt. \todo{cite this as well}
+Die zuvor bestimmen Polarisationseigenschaften werden nun genutzt um eine einfache optische Diode aufzubauen. Hierbei wird nach dem Linearpolarisator ein $\lambda / 4$-Plättchen benutzt um das linear polarisierte Licht zu zirkulärer Polarisation zu konvertieren. Alle Komponenten, an denen der Strahl hinter der Diode reflektieren kann, sind stets orthogonal zum Strahl (insbesondere ist dies relevant für den externen Resonator mit seinen beiden Spiegeln) platziert, so dass bei Reflektion an einem Spiegel die Richtung der zirkulären Polarisation wechselt \cite[9]{Versuchsanleitung442}.
 
-Trifft dann so reflektiertes Licht wieder auf die $\lambda / 4$-Platte, wird es zu linear polarisiertem Licht umgewandelt, dass Polarisationsrichtung $90^\circ$ zu der ursprünglichen ist. Der Linearpolarisator wird so ausgerichtet, dass er parallel zu der Polarisationsrichtung des Lasers steht. als Konsequenz trifft das reflektierte Licht mit $90^\circ$ gedrehter Polarisation auf den Polarisator, wird also maximal absorbiert.
+Trifft dann so reflektiertes Licht wieder auf die $\lambda / 4$-Platte, wird es zu linear polarisiertem Licht umgewandelt, dessen Polarisationsrichtung um $90^\circ$ zu der ursprünglichen verschoben ist. Der Linearpolarisator wird so ausgerichtet, dass er parallel zu der Polarisationsrichtung des Lasers steht. Als Konsequenz trifft das reflektierte Licht mit $90^\circ$ gedrehter Polarisation auf den Polarisator, wird also maximal absorbiert (die Polarisation des Lichts steht so genau senkrecht zur Transmissionsachse des Polarisators).
 
-Eine solche Diode wurde hinter dem Spiegel S2 aufgebaut. Dies dient vorallem dazu instabilitäten des Lasers durch Reflexion an dem später aufzubauenden externen Resonator vorzubeugen.
+Eine solche Diode wurde hinter dem Spiegel S2 aufgebaut. Dies dient vor allem dazu Instabilitäten des Lasers durch Reflexion an dem später aufzubauenden externen Resonator vorzubeugen, die sonst auftreten können, wenn reflektiertes Licht (aufgrund des sphärischen Resonatorspiegels mit nichtlinearen Gangunterschieden bzw. Phasenunterschieden) in den Resonator miteingekoppelt wird.
 
-Bei Aufbau der Diode wird zunächst das Minimum der Transmission am Linearpolarisator mittels der Photodiode bestimmt und dieser damm um $90^\circ$ gedreht. Das $\lambda / 4$ plättchen wird $45^\circ$ zu der Minimalstellung des Linearpolarisators (und somit auch zu der Maximalstellung) verdreht.
+Bei Aufbau der Diode wird zunächst das Minimum der Transmission am Linearpolarisator mittels der Photodiode bestimmt und dieser damm um $90^\circ$ gedreht. Das $\lambda / 4$-Plättchen wird $45^\circ$ zu der Minimalstellung des Linearpolarisators (und somit auch zu der Maximalstellung) verdreht.
