--- a/442-laser/latex/einleitung.tex
+++ b/442-laser/latex/einleitung.tex
@@ -38,9 +38,9 @@ $q$ entspricht der Modenzahl der longitudinalen (in Richtung der Strahlachse) Mo
 
 Neben den Resonatormoden hängt das Modenspektrum eines spezifischen Lasers auch vom Verstärkungsprofil des konkreten aktiven Mediums ab, welches durch die natürliche Linienbreite sowie die Dopplerverbreiterung der Emissionslinie des Laserübergangs gegeben ist. Die Dopplerbreite (als HWHM\footnote{\textit{Half Width at Half Maximum: halbe Breite des halben Maximums}} angebenen) aufgrund der Maxwell-Boltzmann-Geschwindigkeitsverteilung der Gasatome des aktiven Mediums ergibt sich als \cite[19]{Versuchsanleitung442}:
 \begin{align*}
-	\nu_D = \sqrt{2k_B \ln(2)}{c}\cdot \nu_0 cdot \sqrt{T/m}
+	\nu_D = \sqrt{2k_B \ln(2)}{c} \cdot \nu_0 \cdot \sqrt{\frac{T}{m}}
 \end{align*}
-Hierbei ist $k_B$ die Boltzmannkonstante, $\nu_0$ die zentrale Frequenz des Laserstrahlprofils, $T$ die Temperatur des Gases und $m$ die (molare) Masse der Gasatome. Es ergibt sich eien Breite von $\Delta \nu = \SI{1.4}{\giga\hertz}$ für $\lambda_\text{Lit}=\SI{632.8}{\nano\meter}$.
+Hierbei ist $k_B$ die Boltzmannkonstante, $\nu_0$ die zentrale Frequenz des Laserstrahlprofils, $T$ die Temperatur des Gases (hier in etwa Raumtemperatur für das Gas in der Entladungsröhre) und $m$ die (molare) Masse der Gasatome. Es ergibt sich so eine Breite von $\Delta \nu = \SI{1.4}{\giga\hertz}$ für $\lambda_\text{Lit}=\SI{632.8}{\nano\meter}$ \cite[19]{Versuchsanleitung442}.
 
 
 \section{Aufbau des HeNe-Lasers}
