--- a/442-laser/latex/einleitung.tex
+++ b/442-laser/latex/einleitung.tex
@@ -31,14 +31,13 @@ An den Spiegeln wird ein großer Teil des Lichts reflektiert und ein geringer Te
 Die Moden eines konfokalen Resonators (also für zwei sphärische Spiegel mit $R_i=L$)) haben die Eigenfrequenzen:
 \begin{align}\label{eq:modes_konfokal}
 	\nu_{qmn}=\left(
-	q + \frac{m+n+1}{2}\cdot \frac{c}{2L}
-	\right)
+	q + \frac{m+n+1}{2}\right)\cdot \frac{c}{2L}
 \end{align}
 $q$ entspricht der Modenzahl der longitudinalen (in Richtung der Strahlachse) Mode, $m,n$ der Modenzahl der transversalen Mode, die Kombination der drei Indizes charakterisiert die Eigenfrequenz einer Mode.
 
 Neben den Resonatormoden hängt das Modenspektrum eines spezifischen Lasers auch vom Verstärkungsprofil des konkreten aktiven Mediums ab, welches durch die natürliche Linienbreite sowie die Dopplerverbreiterung der Emissionslinie des Laserübergangs gegeben ist. Die Dopplerbreite (als HWHM\footnote{\textit{Half Width at Half Maximum: halbe Breite des halben Maximums}} angebenen) aufgrund der Maxwell-Boltzmann-Geschwindigkeitsverteilung der Gasatome des aktiven Mediums ergibt sich als \cite[19]{Versuchsanleitung442}:
 \begin{align*}
-	\nu_D = \sqrt{2k_B \ln(2)}{c} \cdot \nu_0 \cdot \sqrt{\frac{T}{m}}
+	\nu_D = \sqrt{\frac{2k_B \ln(2)}{c}} \cdot \nu_0 \cdot \sqrt{\frac{T}{m}}
 \end{align*}
 Hierbei ist $k_B$ die Boltzmannkonstante, $\nu_0$ die zentrale Frequenz des Laserstrahlprofils, $T$ die Temperatur des Gases (hier in etwa Raumtemperatur für das Gas in der Entladungsröhre) und $m$ die (molare) Masse der Gasatome. Es ergibt sich so eine Breite von $\Delta \nu = \SI{1.4}{\giga\hertz}$ für $\lambda_\text{Lit}=\SI{632.8}{\nano\meter}$ \cite[19]{Versuchsanleitung442}.
 
