--- a/442-laser/latex/fazit.tex
+++ b/442-laser/latex/fazit.tex
@@ -1,3 +1,7 @@
 \chapter{Fazit}
 
-In diesem Versuch wurde ein HeNe-Laser der Laserwellenlänge $\lambda=\SI{632.8}${\nano\meter} aufgebaut und der Laserstrahl hinsichtlich seiner Wellenlänge, seinem Polarisationszustand und des Modenspektrums des genutzten Laserresonators aus einem sphärischen und ebenen Spiegels untersucht, letzteres mithilfe eines externen Resonators. Die Justage des Lasers war sehr zeitaufwändig und verhinderte leider eine Messung des Laserstrahls für mehrere Laserresonatorlängen.
+In diesem Versuch wurde ein HeNe-Laser der Laserwellenlänge $\lambda=\SI{632.8}{\nano\meter}$ aufgebaut und der Laserstrahl hinsichtlich seiner Wellenlänge, seinem Polarisationszustand und des Modenspektrums des genutzten Laserresonators aus einem sphärischen und ebenen Spiegels untersucht, letzteres mithilfe eines externen Resonators. Die Justage des Lasers war sehr zeitaufwändig und verhinderte leider eine Messung des Laserstrahls für mehrere Laserresonatorlängen.
+
+Die Wellenlänge des Laserlichts wurde mithilfe eines Transmissionsgitters und den Winkeln der ersten drei Maximaordnungen des beobachteten Interferenzmusters (Tabelle \ref{tab:gitter_500} auf $\lambda_{500}=\SI{616(5)}{\nano\meter}$ bestimmt.
+
+Mithilfe eines Polarisators und einer Photodiode wurde anschließend der Polarisationzustand des aus dem Laserresonator ausgekoppelten Laserstrahls untersucht. Die ermittelten Photodiodenspannungen abhängig vom Polarisatorwinkel sind in Tabelle \ref{tab:polarisation} aufgeführt. Aus der Messung wurde der Polarisationsgrad als $PG = \num{0.970(0.002)}$ bestimmt und durch die Auftragung der Spannung $U$ als Maß der Lichtintensität gegen den Verdrehungswinkel der Einfluss des Polarisators auf den Laserstrahl die Gültigkeit des Gesetz' von Malus \eqref{eq:malus} bestätigt. Es konnte so festgestellt werden, dass der über Brewsterfenster linear polarisierte Laserstrahl tatsächlich näherungsweise linear polarisiert war.
