added one bracket

--- a/442-laser/latex/einleitung.tex
+++ b/442-laser/latex/einleitung.tex
@@ -14,7 +14,7 @@ Außerdem werden die Moden des erzeugten Laserstrahls mithilfe eines externen Re
 
 Ein Laser braucht ein aktives Medium mit Besetzungsinversion, also einer höheren Besetzungszahldichte eines energetisch höheren Zustands als eines niedrigeren, sowie einen Rückkopplungsmechanismus für die emittierten Laserphotonen.
 Letzteres wird meist durch einen Spiegelresonator erreicht, der mit seinen Abmessungen (also Abstand der Spiegel/Resonatorlänge $L$ und Krümmungsradien der Spiegel $R_i$ ($i=\{1,2\}$) die angeregten Mode(n) des Laserstrahls bestimmt.
-Im Experiment wurde ein HeNe-Laser aufgebaut, dessen Energiezustandsschema wie folgt aussieht (Abbildung \ref{fig:lasertermschema.png}:
+Im Experiment wurde ein HeNe-Laser aufgebaut, dessen Energiezustandsschema wie folgt aussieht (Abbildung \ref{fig:lasertermschema.png}):
 
 \jafps{lasertermschema.png}{Termschema des aufgebauten HeNe-Lasers. Abbildung übernommen aus \cite[16]{Versuchsanleitung442}}{0.6}
 
